--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,12 +8,12 @@
 
 <ion-content [fullscreen]="true">
   <div>
-    <ion-button (click)="gotoOption(1)">Option 1</ion-button>
+    <img src="../../assets/images/option1.jpeg" (click)="gotoOption(1)">
   </div>
   <div>
-    <ion-button (click)="gotoOption(2)">Option 2</ion-button>
+    <img src="../../assets/images/option2.jpeg" (click)="gotoOption(2)">
   </div>
   <div>
-    <ion-button (click)="gotoOption(3)">Option 3</ion-button>
+    <img src="../../assets/images/option3.jpeg" (click)="gotoOption(3)">
   </div>
 </ion-content>
