--- a/src/app/option-choose/option-choose.page.html
+++ b/src/app/option-choose/option-choose.page.html
@@ -2,12 +2,8 @@
 
 </ion-header>
 
-<ion-content>
+<ion-content style="height: 3000px;">
   <div>
     <ion-label class="loader">Loading...</ion-label>
-  </div>
-  
-  <div class="btn-next-wrapper">
-    <ion-button class="btn-next" (click)="next()">Next</ion-button>
   </div>
 </ion-content>
