--- a/src/app/otp/otp.page.html
+++ b/src/app/otp/otp.page.html
@@ -1,4 +1,7 @@
 <ion-header>
+  <ion-buttons slot="start">
+    <ion-back-button style="color: white;" defaultHref="/login"></ion-back-button>
+  </ion-buttons>
   <ion-toolbar>
     <ion-title>otp</ion-title>
   </ion-toolbar>
