--- a/src/app/modal-choose/modal-choose.page.scss
+++ b/src/app/modal-choose/modal-choose.page.scss
@@ -3,3 +3,13 @@
     text-align: left;
 }
 
+.thumbnail{
+    width: 40px;    
+}
+
+video{
+    max-width: 100%;
+    max-height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+}
