--- a/src/global.scss
+++ b/src/global.scss
@@ -31,6 +31,15 @@
     // --background: url(./assets/kia-background.jpg) 0 0/100% 100% no-repeat;
 }
 
-.custom-modal{
-    height: 90%;
+// .custom-modal{
+//     height: 90%;
+// }
+
+.btn-next{
+    width: 50%;
+}
+
+.btn-next-wrapper{
+    width: 100%;
+    text-align: center;
 }
