--- a/src/app/modal-choose/modal-choose.page.scss
+++ b/src/app/modal-choose/modal-choose.page.scss
@@ -3,13 +3,20 @@
     text-align: left;
 }
 
-.thumbnail{
-    width: 40px;    
-}
+// .thumbnail{
+//     width: 40px;    
+// }
 
 video{
     max-width: 100%;
     max-height: 100%;
     display: inline-block;
     vertical-align: middle;
+}
+
+.play-button{
+    position: absolute;
+    color: white;
+    left: 33%;
+    top: 14px;
 }
