--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -65,6 +65,7 @@
     <div style="margin-top: 50px; text-align: center;">
       <ion-button type="submit" [disabled]="!signup.valid" class="btnNavigate" style="margin-right: 40px;">Submit</ion-button>
       <ion-button class="btnNavigate" [routerLink]="['/login']">Back</ion-button>
+      <ion-button class="btnNavigate" [routerLink]="['/home']"  style="margin-left: 40px;">Skip</ion-button>
     </div>
 
   </form>
