--- a/src/app/modal-numeric/modal-numeric.page.html
+++ b/src/app/modal-numeric/modal-numeric.page.html
@@ -9,9 +9,9 @@
 
 <ion-content style="--background: aquamarine;">
   <div style="padding: 10px;">
-    <img src="https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg" alt="Lanka Games">
+    <img src="https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg" alt="Lanka Games" (click)="showImage('https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg')">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis odio totam quisquam, ea magni neque sit minus molestiae, ut aut voluptatem amet eligendi praesentium? Dolorum tenetur cum rem necessitatibus?</p>
-    <ion-input type="tel" placeholder="Your answer here"></ion-input>
+    <ion-input type="tel" style="background: white;" placeholder="Your answer here"></ion-input>
   </div>
   <div class="btn-next-wrapper">
     <ion-button class="btn-next" (click)="next()">Next</ion-button>
