--- a/src/app/view-image/view-image.page.html
+++ b/src/app/view-image/view-image.page.html
@@ -7,7 +7,7 @@
     <ion-icon name="close" size="large" (click)="closeImage()"></ion-icon>
   </div>
   
-  <ion-slides #slides style="height: -webkit-fill-available;" [options]="slideOpts">
+  <ion-slides #slides style="height: -webkit-fill-available;">
     <ion-slide>
       <img [src]="url">
     </ion-slide>
