--- a/src/app/option-choose/option-choose.page.html
+++ b/src/app/option-choose/option-choose.page.html
@@ -2,7 +2,7 @@
 
 </ion-header>
 
-<ion-content style="height: 3000px;">
+<ion-content>
   <div>
     <ion-label class="loader">Loading...</ion-label>
   </div>
