--- a/src/global.scss
+++ b/src/global.scss
@@ -36,11 +36,11 @@
 // }
 
 .btn-next{
-    width: 50%;
+    width: 120px;
     margin: 20px;
 }
 
 .btn-next-wrapper{
     width: 100%;
-    text-align: center;
+    text-align: end;
 }
