--- a/src/app/modal-numeric/modal-numeric.page.html
+++ b/src/app/modal-numeric/modal-numeric.page.html
@@ -13,7 +13,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis odio totam quisquam, ea magni neque sit minus molestiae, ut aut voluptatem amet eligendi praesentium? Dolorum tenetur cum rem necessitatibus?</p>
     <ion-input type="tel" style="background: white;" placeholder="Your answer here"></ion-input>
   </div>
+  <!-- <div class="btn-next-wrapper">
+    <ion-button class="btn-next" (click)="next()">Next</ion-button>
+  </div> -->
   <div class="btn-next-wrapper">
+    <ion-button class="btn-next" (click)="closeModal()">Exit</ion-button>
     <ion-button class="btn-next" (click)="next()">Next</ion-button>
   </div>
 </ion-content>
