--- a/src/app/modal-numeric/modal-numeric.page.html
+++ b/src/app/modal-numeric/modal-numeric.page.html
@@ -1,23 +1,21 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Question 1</ion-title>
-    <div slot="end" class="close-wrapper">
-      <ion-icon name="close" (click)="closeModal()"></ion-icon>
-    </div>    
   </ion-toolbar>
 </ion-header>
 
-<ion-content style="--background: aquamarine;">
-  <div style="padding: 10px;">
-    <img src="https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg" alt="Lanka Games" (click)="showImage('https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg')">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis odio totam quisquam, ea magni neque sit minus molestiae, ut aut voluptatem amet eligendi praesentium? Dolorum tenetur cum rem necessitatibus?</p>
-    <ion-input type="tel" style="background: white;" placeholder="Your answer here"></ion-input>
+<ion-content style="--background: #e9f9ee;">
+  <div style="margin: 10px; background: white;">
+    <div style="padding: 10px;">
+      <img src="https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg" alt="Lanka Games" (click)="showImage('https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg')">
+      <ion-label style="font-size: 20px;">Lorem ipsum dolor sit amet eligendi praesentium? Dolorum tenetur cum rem necessitatibus?</ion-label>
+      <ion-input type="tel" style="background: palegreen; height: 60px; margin: 10px 0;" placeholder="Your answer here"></ion-input>
+    </div>
+  
+    <div class="btn-next-wrapper">
+      <ion-button class="btn-submit" shape="round" fill="outline" style="margin-right: 20px;" (click)="closeModal()">Submit</ion-button>
+      <ion-button class="btn-next" shape="round" (click)="next()">Next</ion-button>
+    </div>
   </div>
-  <!-- <div class="btn-next-wrapper">
-    <ion-button class="btn-next" (click)="next()">Next</ion-button>
-  </div> -->
-  <div class="btn-next-wrapper">
-    <ion-button class="btn-next" (click)="closeModal()">Exit</ion-button>
-    <ion-button class="btn-next" (click)="next()">Next</ion-button>
-  </div>
+  
 </ion-content>
