--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,7 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,531;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,531;1,600;1,700;1,800;1,900&display=swap");
 
 .background-image{
     --background: rgb(44, 163, 172);
@@ -36,11 +37,34 @@
 // }
 
 .btn-next{
+    color: white;
     width: 120px;
-    margin: 20px;
+    height: 40px;
+    line-height: 40px;
+    border: none;
+    --background: linear-gradient(4deg, #60dca0 0%, #18c1b2 100%);
+}
+
+.btn-submit{
+    color: #292929;
+    width: 120px;
+    height: 40px;
+    line-height: 40px;
+    --border-color: #9eb1b1;
+    --background: transparent;
 }
 
 .btn-next-wrapper{
     width: 100%;
     text-align: end;
+    padding: 10px;
+}
+
+.topics{
+    font-size: 18px;
+    margin: unset;
+}
+
+ion-toolbar{
+    --background:#c8f1d4;
 }
