--- a/src/app/modal-numeric/modal-numeric.page.html
+++ b/src/app/modal-numeric/modal-numeric.page.html
@@ -4,12 +4,12 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content style="--background: #e9f9ee;">
-  <div style="margin: 10px; background: white;">
+<ion-content class="background-image">
+  <div class="main-container">
     <div style="padding: 10px;">
-      <img src="https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg" alt="Lanka Games" (click)="showImage('https://kiasl-content.s3.ap-southeast-1.amazonaws.com/uploads/promotion/2021/11/c2d9138028_1638255154.jpg')">
-      <ion-label style="font-size: 20px;">Lorem ipsum dolor sit amet eligendi praesentium? Dolorum tenetur cum rem necessitatibus?</ion-label>
-      <ion-input type="tel" style="background: palegreen; height: 60px; margin: 10px 0;" placeholder="Your answer here"></ion-input>
+      <img src="https://i.stack.imgur.com/GZgel.png" alt="Lanka Games" (click)="showImage('https://i.stack.imgur.com/GZgel.png')">
+      <ion-label style="font-size: 20px;">In the above question number of triangle are?</ion-label>
+      <ion-input type="tel" class="cusotm-input" placeholder="Your answer here"></ion-input>
     </div>
   
     <div class="btn-next-wrapper">
