--- a/src/app/modal-choose/modal-choose.page.scss
+++ b/src/app/modal-choose/modal-choose.page.scss
@@ -12,6 +12,11 @@ video{
     max-height: 100%;
     display: inline-block;
     vertical-align: middle;
+    border-radius: 10px;
+}
+
+img{
+    border-radius: 10px;
 }
 
 .play-button{
@@ -19,4 +24,11 @@ video{
     color: white;
     left: 33%;
     top: 14px;
+}
+
+.main-container{
+    margin: 10px;
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
 }
