--- a/src/app/modal-numeric/modal-numeric.page.scss
+++ b/src/app/modal-numeric/modal-numeric.page.scss
@@ -2,3 +2,20 @@
     width: 30px;
     text-align: left;
 }
+
+.main-container{
+    margin: 10px;
+    background: white;
+    border-radius: 10px;
+}
+
+.cusotm-input{
+    background: palegreen;
+    height: 60px;
+    margin: 10px 0;
+    border-radius: 10px;
+}
+
+img{
+    border-radius: 10px;
+}
