--- a/src/app/option-numeric-category/option-numeric-category.page.html
+++ b/src/app/option-numeric-category/option-numeric-category.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content style="--background: #e9f9ee;">
+<ion-content class="background-image-light">
   <div class="main-container">
     <div *ngFor="let item of category">
       <ion-button shape="round" class="custom-btn" (click)="choosedCategory(item.id)">{{item.name}}</ion-button>
