--- a/src/app/otp/otp.page.scss
+++ b/src/app/otp/otp.page.scss
@@ -6,4 +6,6 @@
     border-radius: 25%;
     --background:white;
     --padding-start:7px;
+    font-size: x-large;
+    border: 1px solid green;
 }
