--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -19,4 +19,10 @@ img{
   background: #e9f9ee;
   border-radius: 10px;
   color: #446d76;
+  font-size: small;
+  width: fit-content;
+}
+
+ion-col{
+  align-self: center;
 }
