--- a/src/app/option-numeric/option-numeric.page.scss
+++ b/src/app/option-numeric/option-numeric.page.scss
@@ -1,9 +1,6 @@
-
-
 .loader{
-    width: -webkit-fill-available;
-    text-align: center;
-    position: fixed;
+    position: absolute;
     top: 48%;
-    font-size: larger;
+    text-align: center;
+    width: -webkit-fill-available;
 }
