--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,32 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId="main-menu" content-id='main'>
+    <ion-header>
+      <ion-toolbar>
+        <img src="/assets/images/Lanka Games Icon.png" slot="start" style="padding: 0 20px 0 20px;">
+      </ion-toolbar>
+    </ion-header>
+    <ion-content style="--background: #c8f1d4;">
+      <ion-list style="background:transparent;">
+        <ion-menu-toggle>
+          <ion-item style="border-bottom: 1px solid #0000006b; margin-bottom: 20px;">
+            <ion-icon style="font-size: -webkit-xxx-large;" name="call-outline"></ion-icon>
+            <ion-label class="phone-wrapper">{{service.userPhone}}</ion-label>        
+          </ion-item>
+          <ion-item>
+            <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+            <ion-label>My Profile</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="help-circle-outline" slot="start"></ion-icon>
+            <ion-label>FAQ</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="alert-circle-outline" slot="start"></ion-icon>
+            <ion-label>About Us</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
