--- a/src/app/modal-choose/modal-choose.page.html
+++ b/src/app/modal-choose/modal-choose.page.html
@@ -5,52 +5,55 @@
 </ion-header>
 
 <ion-content class="background-image">
-  <div class="main-container">
+  <div>
+    <div class="main-container" style="padding: 10px 0;">
 
-    <div style="margin: 10px;" *ngIf="questionImageUrl!=''">
-      <img [src]="questionImageUrl" (click)="showImage(questionImageUrl)">
-    </div>    
-    <ion-card style="margin: unset; padding: 5px;" *ngIf="questionVideoUrl != ''">
-      <video playinline preload="auto" poster="{{questionVideoThumbnail}}" controls controlsList="nodownload">
-        <source [src]="questionVideoUrl" type="video/mp4">
-      </video>
-    </ion-card>
+      <div style="margin: 10px;" *ngIf="questionImageUrl!=''">
+        <img [src]="questionImageUrl" (click)="showImage(questionImageUrl)">
+      </div>
+      <ion-card style="margin: unset; padding: 5px;" *ngIf="questionVideoUrl != ''">
+        <video playinline preload="auto" poster="{{questionVideoThumbnail}}" controls controlsList="nodownload">
+          <source [src]="questionVideoUrl" type="video/mp4">
+        </video>
+      </ion-card>
 
-    <ion-list>
-      <ion-radio-group (ionChange)="selectedAnswer($event)">
-        <ion-list-header>
-          <ion-label style="font-size: 20px; padding: 10px;">
-            {{question}}
-          </ion-label>
-        </ion-list-header>
+      <ion-list>
+        <ion-radio-group (ionChange)="selectedAnswer($event)" value="{{answerId}}">
+          <ion-list-header>
+            <ion-label style="font-size: 20px; padding: 10px;">
+              {{question}}
+            </ion-label>
+          </ion-list-header>
 
-        <ion-grid>
-          <ion-row *ngFor="let item of answers; let i = index">
-            <ion-col size="9">
-              <ion-item>
-                <ion-radio style="--color-checked: #446d76;" slot="start" value="{{item.value}}"></ion-radio>
-                <ion-label style="overflow-wrap: break-word; color: #446d76">{{item.answer}}</ion-label>
-              </ion-item>
-            </ion-col>
-            <!-- <ion-col size="1">
+          <ion-grid>
+            <ion-row *ngFor="let item of answers; let i = index">
+              <ion-col size="9">
+                <ion-item>
+                  <ion-radio style="--color-checked: #446d76;" slot="start" value="{{item.answerId}}"></ion-radio>
+                  <ion-label style="overflow-wrap: break-word; color: #446d76">{{item.answer}}</ion-label>
+                </ion-item>
+              </ion-col>
+              <!-- <ion-col size="1">
               <ion-icon name="play-circle" size="large" style="color: aqua;" *ngIf="item.videoThumbnail"
                 (click)="showVideo(item.video, item.videoThumbnail)"></ion-icon>
             </ion-col> -->
-            <ion-col size="3">
-              <img (click)="showImage(item.image)" class="thumbnail" [src]="item.image">
-              <!-- <ion-item> -->
-                <ion-icon class="play-button" name="play-circle-outline" size="large" *ngIf="item.videoThumbnail" (click)="showVideo(item.video, item.videoThumbnail)"></ion-icon>              
+              <ion-col size="3">
+                <img (click)="showImage(item.image)" class="thumbnail" [src]="item.image">
+                <!-- <ion-item> -->
+                <ion-icon class="play-button" name="play-circle-outline" size="large" *ngIf="item.videoThumbnail"
+                  (click)="showVideo(item.video, item.videoThumbnail)"></ion-icon>
                 <img (click)="showVideo(item.video, item.videoThumbnail)" class="thumbnail" [src]="item.videoThumbnail">
-              <!-- </ion-item> -->
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-radio-group>
-    </ion-list>
-    <div class="btn-next-wrapper">
-      <ion-button class="btn-submit" shape="round" fill="outline" style="margin-right: 20px;" (click)="closeModal()">Submit</ion-button>
-      <ion-button class="btn-next" shape="round" (click)="next()">Next</ion-button>
+                <!-- </ion-item> -->
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-radio-group>
+      </ion-list>
+      <div class="btn-next-wrapper">
+        <ion-button class="btn-submit" shape="round" fill="outline" style="margin-right: 20px;" (click)="closeModal()">
+          Submit</ion-button>
+        <ion-button class="btn-next" shape="round" (click)="next()">Next</ion-button>
+      </div>
     </div>
   </div>
-
 </ion-content>
