--- a/src/app/modal-choose/modal-choose.page.scss
+++ b/src/app/modal-choose/modal-choose.page.scss
@@ -27,7 +27,7 @@ img{
 }
 
 .main-container{
-    margin: 10px;
+    margin: 0 10px;
     background: white;
     border-radius: 10px;
     overflow: hidden;
