--- a/src/app/option-choose/option-choose.page.html
+++ b/src/app/option-choose/option-choose.page.html
@@ -1,9 +1,7 @@
-<ion-header>
-
-</ion-header>
-
-<ion-content>
-  <div>
-    <ion-label class="loader">Loading...</ion-label>
+<ion-content class="background-image-light" fullscreen="true">
+  <div style="position: relative; background: white; height: -webkit-fill-available;">
+    <div class="loader">
+      <ion-label>Loading...</ion-label>
+    </div>    
   </div>
 </ion-content>
