--- a/src/global.scss
+++ b/src/global.scss
@@ -28,7 +28,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,531;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,531;1,600;1,700;1,800;1,900&display=swap");
 
 .background-image{
-    --background: darkseagreen;
+    // --background: darkseagreen;
+    --background: #e9f9ee;
 }
 
 .background-image-light{
@@ -69,4 +70,22 @@
 
 ion-toolbar{
     --background:#c8f1d4;
+}
+
+//To web view
+
+@media (min-width: 500px) {
+    ion-app {
+        width: 500px;
+        margin: auto;
+        position: relative;
+    }
+}
+
+body{
+    background: darkolivegreen;
+}
+
+.modal-wrapper.sc-ion-modal-md {
+    height: -webkit-fill-available;
 }
