--- a/src/app/modal-numeric/modal-numeric.page.html
+++ b/src/app/modal-numeric/modal-numeric.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Question {{questionNo}}</ion-title>
+    <ion-icon name="home-outline" slot="end" class="btn-home" [routerLink]="'/home'"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
