--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ion-app>
+<ion-app [ngClass]="{'app-wrapper': service.halfScreen}">
   <ion-menu menuId="main-menu" content-id='main'>
     <ion-header>
       <ion-toolbar>
