--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -32,4 +32,6 @@
       </h1>
     </div>
   </div>
+
+  <ion-button (click)="fullScreenSwitch()">Full Screen: {{!service.halfScreen}}</ion-button>
 </ion-content>
