--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,5 +33,5 @@
     </div>
   </div>
 
-  <ion-button (click)="fullScreenSwitch()">Full Screen: {{!service.halfScreen}}</ion-button>
+  <!-- <ion-button (click)="fullScreenSwitch()">Full Screen: {{!service.halfScreen}}</ion-button> -->
 </ion-content>
